2019-06-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book-rubrica: Do not crash on bad card

	Do not crash if a card has multiple "Net" sections

	* libbalsa/address-book-rubrica.c (extract_cards): Call
	libbalsa_address_set_addr_list() only once, even when a card has
	multiple "Net" sections.

2019-06-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address-book-rubrica.c
	(libbalsa_address_book_rubrica_modify_address): Fix the search
	for the card matching a given full-name.

2019-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Guard against null string.

	* libbalsa/abook-completion.c (completion_data_new):

2019-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix a thinko

	* libbalsa/address.c (libbalsa_address_new_from_edit_entries):

2019-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Allow address == NULL in libbalsa_address_set_edit_entries() and
	libbalsa_address_get_edit_widget()

	because the address book editor uses that.

	* libbalsa/address.c (libbalsa_address_set_edit_entries),
	(libbalsa_address_get_edit_widget),
	(libbalsa_address_new_from_edit_entries):

2019-06-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix crash using incomplete VCard items

	* libbalsa/address.c (vcard_strsplit): Ensure that the array
	  contains always 5 items.

2019-06-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Add -Wredundant-decls -Wshadow -Wformat-security compiler warnings

	* configure.ac:
	* meson.build:

2019-06-10  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix format string error

	* src/sendmsg-window.c (sw_insert_sig_activated): fix a “format
	  not a string literal and no format arguments” error (using
	    gcc w/ -Werror=format-security).

2019-06-10  Albrecht Dreß  <albrecht.dress@arcor.de>

	Implement VCalendar stuff using G_*_TYPE()

	* libbalsa/rfc2445.[ch]: implement LibBalsaVCal and LibBalsaVEvent
	  using G_DECLARE_FINAL_TYPE() and G_DEFINE_TYPE(); make the data